--- a/app/src/main/res/menu/foro_menu.xml
+++ b/app/src/main/res/menu/foro_menu.xml
@@ -14,4 +14,12 @@
         android:title="Archivar"
         android:icon="@drawable/baseline_archive_24"
         app:showAsAction="never"/>
+    <item android:id="@+id/op_login"
+        android:title="Iniciar Sección"
+        android:icon="@drawable/baseline_login_24"
+        app:showAsAction="always"/>
+    <item android:id="@+id/op_register"
+        android:title="Registarse"
+        android:icon="@drawable/baseline_person_add_24"
+        app:showAsAction="always"/>
 </menu>
