--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,12 +20,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="20dp">
 
             <EditText
                 android:id="@+id/Correo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="119dp"
                 android:ems="10"
                 android:hint="Correo"
                 android:inputType="text" />
@@ -33,7 +33,7 @@
             <EditText
                 android:id="@+id/Contrasena"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="92dp"
                 android:ems="10"
                 android:hint="Contraseña"
                 android:inputType="text" />
@@ -43,6 +43,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Ingresar" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_registro"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:text="No tienes una cuenta?" />
+
+                <TextView
+                    android:id="@+id/tv_register"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="openRegisterActivity"
+                    android:text="Sign Up"
+                    android:textColor="@color/black"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </LinearLayout>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
